<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Telephone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_admin">手机号或邮箱</string>
    <string name="label">"标签"</string>
    <string name="login_pwd">密码</string>
	<string name="login_login">登录</string>
	<string name="login_register">注册</string>
	<string name="login_select">请选择体验账号</string>
	<string name="login_client">OK,立即体验</string>
	<string name="tips">长按下方按钮添加需要一键拨号的联系人（支持手动输入和从通讯录选择导入）</string>
	
	<string name="ability_name">云之讯能力演示</string>
	<string name="ability_main_name">医疗服务</string>
	<string name="ability_audio">语音</string>
	<string name="ability_im">IM</string>
	<string name="ability_verification">验证码</string>
	<string name="ability_video">视频</string>
	<string name="ability_conference">视频会议</string>
	<string name="ability_groupchat">群聊</string>
	
	<string name="ability_main_adressBook">通讯录</string>
	<string name="ability_main_videoPhone">视频通话</string>
	<string name="ability_main_myPhone">亲情电话</string>
	<string name="ability_main_urgencyPhone">应急电话</string>
	<string name="ability_main_urgencyReport">应急汇报</string>
	<string name="ability_main_myDoctor">我的医生</string>
	<string name="ability_main_myRole">我的角色</string>
	<string name="ability_main_paientRecord">病人档案</string>
	<string name="ability_main_about">关于软件</string>
	<string name="ability_main_setting">通用设置</string>
	<string name="ability_main_restTime">作息时间</string>
	<string name="ability_main_healthRecord">健康档案</string>
	<string name="ability_main_GPS">导航</string>
	<string name="ability_main_parentHealth">亲人健康</string>
	
	<string name="myDoctor_doctorList">我的医生列表</string>
	<string name="myDoctor_medicalRemind">医疗提醒</string>
	<string name="myDoctor_careRemind">保健计划提醒</string>
	<string name="myDoctor_call">发起通话</string>
	<string name="myDoctor_setting">设置</string>

	<string name="mycenter">个人中心</string>
	<string name="mycenter_admin">账户名称</string>
	<string name="mycenter_name">当前身份</string>
	<string name="mycenter_balance">账户余额</string>
	<string name="mycenter_out">退出当前账户</string>
	
	<string name="audio_test_mode">请选择一下语音测试方式</string>
	<string name="intelligence_call">智能呼叫</string>
	<string name="intelligence_call_read">优先发起免费的VOIP通话,若用户不在线，则发起直拨</string>
	<string name="free_call">免费电话</string>
	<string name="free_call_read">纯网络电话,不依赖传统电信网.通话双方需要处于3G、4G或WIFI环境</string>
	<string name="direct_call">直拨电话</string>
	<string name="direct_call_read">主叫方需处于3G,4G或WIFI环境,被叫方无需求</string>
	<string name="back_call">回拨电话</string>
	<string name="back_call_read">通话不依赖于网络.成功发起呼叫后，收到一个来电,接听后即可向对方发起呼叫.</string>
	<string name="call_phone">手机号:请绑定测试手机号码</string>
	
	<string name="im_send">发送</string>
	<string name="im_file">附件</string>
	<string name="im_photo">拍照</string>
	<string name="im_position">位置</string>
	<string name="im_image">图片</string>
	
	<string name="verification_name">验证码</string>
	<string name="verification_phone">手机号</string>
	<string name="verification_num">验证码</string>
	<string name="verification_getaudio">获取语音验证码</string>
	<string name="verification_getsms">获取短信验证码</string>
	<string name="verification_text1">或</string>
	<string name="verification_text2">验证</string>
	
	<string name="menu_replace">更换Client账号</string>
	<string name="menu_feedback">意见反馈</string>
	<string name="menu_about">关于</string>
	<string name="menu_forwarding">开启呼转</string>
	
	<string name="dial_hide">隐藏</string>
	
	<string name="conference_start">发起会议</string>
	<string name="conference_start_again">邀请进入会议</string>
	<string name="conference_add">添加完成</string>
	<string name="conference_addcustom">添加自定义成员</string>
	<string name="conference_modify">修改自定义成员</string>
	<string name="conference_et">请输入手机号码</string>
	<string name="conference_addperson">增加会议成员</string>
	
	
	
	
	
	
	
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加玲闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string> 
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>
    
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

    <string-array name="alarm_set">
	    <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
	    <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
	    <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
	    <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
	    <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
  <string-array name="snooze_duration_entries">
    <item msgid="8337408933053603125">"5 分钟"</item>
    <item msgid="5294206441496024610">"10 分钟"</item>
    <item msgid="2165904039211935470">"15 分钟"</item>
    <item msgid="7248236967714374250">"20 分钟"</item>
    <item msgid="738394723625179423">"25 分钟"</item>
    <item msgid="1180222611308391616">"30 分钟"</item>
  </string-array>
  <string-array name="snooze_duration_values">
    <item msgid="3655014754453084122">"5"</item>
    <item msgid="8939029597449573449">"10"</item>
    <item msgid="3922647341176353315">"15"</item>
    <item msgid="5821804105985044459">"20"</item>
    <item msgid="6048861883552402852">"25"</item>
    <item msgid="2740866721232379791">"30"</item>
  </string-array>
  <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>
	
	
	
	
	
</resources>
