<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include
        android:id="@+id/top_bar"
        layout="@layout/top_ability" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <LinearLayout
                    android:id="@+id/ll_main_all_adressBook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_adressBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_audio"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_adressBook"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_videoPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_videoPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_im"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_videoPhone"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>   
                </LinearLayout> 
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_main_all_myPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_myPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_verification"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_myPhone"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_urgencyPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_urgencyPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_video"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_urgencyPhone"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_main_all_urgencyReport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_urgencyReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_verification"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_urgencyReport"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_myDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_myDoctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_video"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_myDoctor"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_main_all_restTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_restTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_verification"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_restTime"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_healthRecord"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_healthRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_video"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_healthRecord"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_main_all_myRole"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_myRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_verification"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_myRole"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_video"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_setting"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_main_all_about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_verification"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_about"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_vertical" />

                <LinearLayout
                    android:id="@+id/ll_main_all_GPS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_main_all_GPS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ability_video"
                        android:clickable="false"
                        android:focusable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="@string/ability_main_GPS"
                        android:textColor="#666666"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>  
</LinearLayout>
